--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,10 +47,24 @@ add_executable(start_patrolling src/patrol.cpp)
 ament_target_dependencies(start_patrolling rclcpp nav_msgs rclcpp_action 
 geometry_msgs std_msgs  sensor_msgs robot_patrol)
 
+
+add_executable(direction_server src/direction_service.cpp)
+ament_target_dependencies(direction_server rclcpp std_msgs  sensor_msgs robot_patrol)
+
+add_executable(client_server src/test_service.cpp)
+ament_target_dependencies(client_server rclcpp nav_msgs geometry_msgs std_msgs sensor_msgs robot_patrol)
+
+add_executable(patrol_v2 src/patrol_v2.cpp)
+ament_target_dependencies(patrol_v2 rclcpp nav_msgs rclcpp_action 
+geometry_msgs std_msgs  sensor_msgs robot_patrol)
+
+
 # Install executable files
 install(TARGETS
    start_patrolling
-
+   direction_server
+   client_server
+   patrol_v2
 )
 
 # Install launch files.
